Rename variable for manual stop words
Updated variable name for manual stop words to match file.

--- a/Teil 4 (Testdaten-Pipeline, Inference, Evaluation, Export).Rmd
+++ b/Teil 4 (Testdaten-Pipeline, Inference, Evaluation, Export).Rmd
@@ -39,7 +39,7 @@ themen_namen <- readRDS("themen_namen.rds")
 final_gbm <- readRDS("gbm_modell_final.rds")
 final_rf_reg <- readRDS("rf_regr_modell_final.rds")
 best_t <- readRDS("optimaler_threshold.rds")
-manuelle_stoppwörter <- readRDS("manuelle_stoppwörter.rds")
+manuelle_stoppworte <- readRDS("manuelle_stoppworte.rds")
 ```
 
 
