--- a/Teil 3 (GBM-Klassifikation, Threshold, RF-Regression, Auswertung).Rmd
+++ b/Teil 3 (GBM-Klassifikation, Threshold, RF-Regression, Auswertung).Rmd
@@ -18,7 +18,7 @@ library(randomForest)
 ```
 
 ```{r}
-setwd("C:/Users/timfe/OneDrive/Dokumente/5. Studium/Master Ulm/Data Science & Law")
+setwd("Working Directory")
 ```
 
 
