--- a/Teil 4 (Testdaten-Pipeline, Inference, Evaluation, Export).Rmd
+++ b/Teil 4 (Testdaten-Pipeline, Inference, Evaluation, Export).Rmd
@@ -26,7 +26,7 @@ library(tidyverse)
 library(slam)
 library(caret)
 
-setwd("C:/Users/timfe/OneDrive/Dokumente/5. Studium/Master Ulm/Data Science & Law/Version Maria")
+setwd("Working Directory")
 ```
 
 
